<resources>
    <string name="app_name">AirSeat</string>
    <string name="title_tab_home">Beranda</string>
    <string name="title_tab_history">Riwayat</string>
    <string name="title_tab_notification">Notifikasi</string>
    <string name="title_tab_profile">Akun</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="text_otp_verified">OTP verification successful</string>
    <string name="hint_password">Input your password</string>
    <string name="your_name">Your name</string>
    <string name="title_email_phone">Email / Phone Number</string>
    <string name="title_password">Password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="not_registered">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="register">Register</string>
    <string name="hint_phone">Input your phone number</string>
    <string name="text_register">Register</string>
    <string name="text_login">Login</string>
    <string name="title_name">Name</string>
    <string name="title_phone">Phone number</string>
    <string name="title_confirm_password">Confirm Password</string>
    <string name="text_input_otp">Input OTP</string>
    <string name="text_type_the_6_digit_code_sent_to">Type the 6 digit code sent to </string>
    <string name="text_resend_otp">Resend OTP within %1$d seconds remaining</string>
    <string name="text_request_a_new_code_via_email">Request a new code via Email</string>
    <string name="text_reset_password">Reset password</string>
    <string name="text_new_password">New Password</string>
    <string name="hint_new_password">Input your new password</string>
    <string name="hint_confirm_new_password">Confirm new password</string>
    <string name="text_save">Save</string>
    <string name="text_email_gw">lopeynope@gmail.com</string>
    <string name="text_sign_up_here">Sign up here</string>
    <string name="text_email">Email</string>
    <string name="text_login_here">Login Here</string>
    <string name="text_timer_otp">%1$d seconds remaining</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="error">Error: %1$s</string>
    <string name="create_email_input_dialog">createEmailInputDialog: %1$s</string>
    <string name="dialog_req_update_password">Password change request has been sent to your email</string>
    <string name="ok">OK</string>
    <string name="proceed_login">proceedLogin %1$s</string>
    <string name="password_is_incorrect">Password is incorrect</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="error_email_empty">Email cannot be empty</string>
    <string name="error_email_invalid">Input your email according to the format</string>
    <string name="text_register_success">You Have Registered\nPlease Verify Account</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_password_does_not_match">Password doesn\'t match</string>
    <string name="text_error_phone_cannot_empty">Phone Number cannot be empty</string>
    <string name="text_logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_email">Input your email</string>
    <string name="text_verify_email">Verify Email</string>
    <string name="text_verify">Verify</string>
    <string name="text_verify_change_password_success">You Have Been Verified\nPlease Verify Otp</string>
    <string name="text_change_password_success">You Have Changed Your Password\nPlease Login</string>
    <string name="text_header_account">Account</string>
    <string name="text_header_notification">Notification</string>
    <string name="text_depart_place">Jakarta (JKT)</string>
    <string name="text_from">From</string>
    <string name="text_to">To</string>
    <string name="text_arrival_place">Melbourne (MLB)</string>
    <string name="text_depart_return">Depart – Return?</string>
    <string name="text_departure">Departure</string>
    <string name="text_return">Return</string>
    <string name="text_passengers">Passengers</string>
    <string name="text_seat_class">Seat Class</string>
    <string name="text_count_passengers">2 Passengers</string>
    <string name="text_choosen_class">Premium Economy</string>
    <string name="text_search_flight">Search Flight</string>
    <string name="text_city_flight"><![CDATA[Jakarta –> Melbourne]]></string>
    <string name="text_duration_flight">(4h 50m)</string>
    <string name="text_total">Total</string>
    <string name="text_price">IDR. 4.950.000</string>
    <string name="text_favorite_title">Favorite Destination</string>
    <string name="text_welcome">Hi, Where will you go?</string>
    <string name="text_flight_option">Flight Options</string>
    <string name="text_depart_code">JKT</string>
    <string name="text_arrival_code">MLB</string>
    <string name="text_price_ticket">IDR 4.950.000</string>
    <string name="text_promo_ticket">Promo 30% OFF</string>
    <string name="text_flight_category">Direct</string>
    <string name="text_airline_class">Singapore Airlines – Premium Economy</string>
    <string name="text_depart_time">07:00</string>
    <string name="text_arrival_time">11:00</string>
    <string name="text_duration">4h 50m</string>
    <string name="text_filter">Filter</string>
    <string name="tv_promo_favorite">50% OFF</string>
    <string name="text_start_from">Start from IDR 4.950.000</string>
    <string name="text_promo_period">20 – 30 Maret 2024</string>
    <string name="text_promo_airlines">AirAsia</string>
    <string name="text_promo_city"><![CDATA[Jakarta -> Tokyo]]></string>
    <string name="text_early_arrival">Early arrival</string>
    <string name="text_flight_title"><![CDATA[JKT > MLB]]></string>
    <string name="text_strip">–</string>
    <string name="string_loading">loading</string>
    <string name="close">Close</string>
    <string name="flight_detail">Flight Detail</string>
    <string name="payment_method">Payment Method</string>
    <string name="sign_in">Sign In</string>
    <string name="total">Total</string>
    <string name="payment">Payment</string>
    <string name="booking_code">Booking Code :</string>
    <string name="departure">Departure</string>
    <string name="information">Information :</string>
    <string name="arrival">Arrival</string>
    <string name="orderer_personal_data">Orderer Personal Data</string>
    <string name="fullName">Fullname</string>
    <string name="hint_full_name">Enter your full name</string>
    <string name="have_a_family_name">Have a Family Name?</string>
    <string name="hint_family_name">Enter your family name</string>
    <string name="family_name">Family Name</string>
    <string name="number_phone">Number Phone</string>
    <string name="hint_phone_number">Enter your phone number</string>
    <string name="email">Email</string>
    <string name="hint_email">Enter your email</string>
    <string name="title">Title</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="hint_date">dd/mm/yyyy</string>
    <string name="citizenship">Citizenship</string>
    <string name="valid_until">Valid Until</string>
    <string name="issuing_country">Issuing Country</string>
    <string name="hint_expiration_date">Expiration date</string>
    <string name="passenger_biodata">Passenger Biodata</string>
    <string name="save">Save</string>
    <string name="orderer_biodata">Orderer Biodata</string>
    <string name="order_information">Order Information</string>
    <string name="detail_price">Detail Price</string>
    <string name="tax">Tax</string>
    <string name="promo">Promo</string>
    <string name="btn_home">Home</string>
    <string name="text_error_fullName_cannot_be_empty">Fullname cannot be empty</string>
    <string name="text_error_number_phone_cannot_be_empty">Number phone cannot be empty</string>
    <string name="text_error_email_should_not_be_empty">Email should not be empty</string>
    <string name="text_error_enter_a_valid_format_email">Enter a valid format email</string>
    <string name="text_error_family_name_cannot_be_empty">Family name cannot be empty</string>
    <string name="text_error_citizenship_cannot_be_empty">Citizenship cannot be empty</string>
    <string name="text_error_id_card_cannot_be_empty">ID Card cannot be empty</string>
    <string name="text_error_id_card_must_be_number">ID Card must be number</string>
    <string name="text_error_the_id_card_validity_period_must_not_be_empty">The ID card validity period must not be empty</string>
    <string name="text_hint_select_title">Select Title</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="text_header_history">History</string>
    <string name="text_button_login_protection">Login</string>
    <string name="text_login_protection">Oops!, You have to login first</string>
    <string name="text_title_empty_data">Data Is Empty</string>
    <string name="text_desc_empty_data">Tidak Ada Data yang ditampilkan</string>
    <string name="text_title_error_general">Sorry we have some problem in our service</string>
    <string name="text_desc_errol_general">Try again in a few moments</string>
    <string name="text_title_loading_data">Try to loading data from server</string>
    <string name="text_desc_no_internet">Please check you internet connection</string>
    <string name="text_title_no_connection">There is no connection</string>
    <string name="text_departure_title_detail">Departure</string>
    <string name="text_arrival_detail_title">Arrival</string>
    <string name="text_information_detail_title">Information:</string>
    <string name="text_have_you_received_otp">Have you received OTP?</string>
    <string name="text_title_empty_notification">Opps! you don\'t have any notification</string>
    <string name="text_desc_empy_notification">Stay tune for notification come yet</string>
    <string name="text_app_version">Version 1.0.0</string>
    <string name="text_snackbar_custom">GeeksforGeeks</string>
    <string name="text_error_title_cannot_be_empty">Title cannot be empty</string>
    <string name="hint_select_country">Select Country</string>
    <string name="text_error_date_of_birth_is_required">Date of Birth is required</string>
    <string name="hint_enter_your_citizenship">Enter your citizenship</string>
    <string name="id_card_paspor">ID Card/Paspor</string>
    <string name="hint_enter_your_id_card_or_passport_number">Enter your ID Card or Passport Number</string>
    <string name="hint_identification_type">Identification Type</string>
    <string name="hint_select_id_type">Select ID type</string>
    <string name="hint_save">Save</string>
    <string name="passenger_header">Passenger %1$d</string>
    <string name="sum_adult">1</string>
    <string name="sum_child">1</string>
    <string name="sum_baby">1</string>
    <string name="passenger_passengerindex">Passenger %1$d - %2$s</string>
    <string name="title_intro_started">Discover the World, Together</string>
    <string name="desc_intro_started">From solo adventures to family vacations, our app simplifies flight booking for everyone. Discover the world, whether you are traveling alone or with loved ones.</string>
    <string name="text_login_failed">"Login Failed, please check your credentials and try again "</string>
    <string name="text_version_app">Version 1.0.0</string>
</resources>