<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_japan"
                app:shapeAppearanceOverlay="@style/rounded_square"/>

            <TextView
                android:id="@+id/tv_promo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_promo_favorite"
                android:textColor="@android:color/white"
                android:paddingVertical="4dp"
                android:textSize="10sp"
                android:paddingHorizontal="12dp"
                android:background="@drawable/image_radius"
                tools:ignore="RtlSymmetry,SmallSp" />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_promo_city"
            android:layout_marginTop="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_promo_airlines"
            android:textColor="@color/md_theme_primary"
            android:layout_marginTop="2dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_promo_period"
            android:textSize="12sp"
            android:layout_marginTop="2dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_start_from"
            android:layout_marginTop="2dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
