<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="2dp"
    android:layout_marginVertical="8dp"
    card_view:cardElevation="4dp"
    card_view:cardBackgroundColor="@color/md_theme_onPrimary"
    card_view:strokeColor="@color/md_theme_primary"
    card_view:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_departure_place"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_depart_code"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_arrow_right"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_arrow_right"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/tv_arrival_place"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_arrival_code"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginVertical="8dp">

            <TextView
                android:id="@+id/tv_departure_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_depart_time"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:text="@string/text_duration"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_arrival_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_arrival_time"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="8dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="4dp">

            <ImageView
                android:id="@+id/img_airline_logo"
                android:layout_width="36dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_logo_plane"/>

            <TextView
                android:id="@+id/tv_airline_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_airline_class"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginVertical="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="8dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_flight_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_flight_category"
                android:textAlignment="center"
                android:background="@drawable/tv_border"
                android:textSize="12sp"
                android:textColor="@color/md_theme_onPrimary"
                android:fontFamily="@font/font_plusjakartasans_bold"
                android:gravity="center"
                android:paddingVertical="4dp"
                android:paddingHorizontal="12dp" />

            <TextView
                android:id="@+id/tv_ticket_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_price_ticket"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textColor="@color/md_theme_primary"
                android:textStyle="bold"
                android:padding="4dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_promo_ticket"
            android:paddingVertical="4dp"
            android:paddingHorizontal="12dp"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/font_plusjakartasans_bold"
            android:background="@drawable/promo_result_radius"
            android:visibility="gone"/>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
